--- a/src/tiniping.css
+++ b/src/tiniping.css
@@ -10,6 +10,10 @@
 * {
   font-family: CookieRun-Regular;
 }
+body {
+  padding: 0;
+  margin: 0;
+}
 .container {
   height: 100%;
   min-height: 100vh;
